# kalyra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: inputParser.hh  input_parser.hh  kalyra.hh  manifest.hh  package.hh  prod_conf.hh  recipe.hh  release.hh  repository.hh  script_generator.hh
qt/: Kalyra.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  env_setup.cc  ff.cc  firmwareRelease.cc  firmwareRelease.hh  inputParser.cc  inputParser.hh  input_parser.cc  kalyra.cc  kalyra.hh  main.cc  manifest.cc  manifest.hh  packageRecipe.cc  packageRecipe.hh  prod_conf.cc  release.cc  releaseComponent.cc  releaseComponent.hh  rpgen.cc  scriptGenerator.cc  scriptGenerator.hh  script_generator.cc
tests/: CMakeLists.txt  inputParser
tests/unit/: testFirmwareRelease.cc  testInputParser.cc  testPackageRecipe.cc
